tests/expectations/compiler/interfaces/path_interface_not_found_fail.out
Error [ECHI03712000]: Interface `lib.aleo/NonExistent` not found.
    --> compiler-test:5:21
     |
   5 | program test.aleo : lib.aleo/NonExistent {
     |                     ^^^^^^^^^^^^^^^^^^^^
     |
     = Make sure the interface is defined in the current program or an imported program.
